--- a/trunk/prAndroidERP/res/layout/activity_main.xml
+++ b/trunk/prAndroidERP/res/layout/activity_main.xml
@@ -1,14 +1,37 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world"
-        tools:context=".MainActivity" />
+    <TextView android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:layout_gravity="center_horizontal"        	
+        	android:text="@string/main_act_tv1"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9"
+        android:layout_margin="10dp"
+        android:background="@drawable/shape_fieldset" >        
+    </RelativeLayout>
 
-</RelativeLayout>
+	<RelativeLayout	    
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_margin="10dp">
+
+	    <Button android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"	        
+	        android:background="@drawable/statelist_boton_rojo"
+	        android:text="@string/mainact_btCancelar"/>
+
+	    <Button
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentRight="true"	        	        
+	        android:background="@drawable/statelist_boton_verde"
+	        android:text="@string/mainact_btConfirmar" />
+	</RelativeLayout>
+</LinearLayout>
