--- a/trunk/prAndroidERP/res/values/styles.xml
+++ b/trunk/prAndroidERP/res/values/styles.xml
@@ -1,5 +1,13 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="AppTheme" parent="android:Theme.Light" />
+    <style name="estiloBotonPulsado">
+        <item  name="android:textStyle">bold|italic </item>
+        <item name="android:textColor">@android:color/white</item>        
+    </style>
+    <style name="estiloBotonNormal">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
 
 </resources>
