--- a/prAndroidERP/res/layout/activity_main.xml
+++ b/prAndroidERP/res/layout/activity_main.xml
@@ -25,7 +25,9 @@
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentLeft="true"	        
 	        android:background="@drawable/statelist_boton_rojo"
-	        android:text="@string/mainact_btCancelar"/>
+	        android:text="@string/mainact_btCancelar"
+	        android:textColor="@color/texto_boton"
+	        />
 
 	    <Button
 	        android:layout_width="wrap_content"
@@ -33,6 +35,7 @@
 	        android:layout_alignParentRight="true"	        	        
 	        android:background="@drawable/statelist_boton_verde"
 	        android:text="@string/mainact_btConfirmar"
+	        android:textColor="@color/texto_boton"	        
 	         />
 	</RelativeLayout>
 </LinearLayout>
