--- a/trunk/prAndroidERP/res/layout/activity_main.xml
+++ b/trunk/prAndroidERP/res/layout/activity_main.xml
@@ -2,21 +2,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:layout_marginTop="10dp" >
 
-    <TextView android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+          
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/shape_fieldset">
+        <ImageButton        	            
+        	 android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
-        	android:layout_gravity="center_horizontal"        	
-        	android:text="@string/main_act_tv1"/>
+        	android:layout_centerInParent="true"        	
+        	android:contentDescription="@string/main_act_imgBt_descripcion"
+        	android:src="@drawable/launcher_icon"
+        	android:onClick="btEscanearPulsado"   	/>
+	</RelativeLayout>
+    
     <RelativeLayout android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"
         android:layout_margin="10dp">
-        <RelativeLayout        
+        <RelativeLayout
+            android:id="@+id/contenedor_fragmento"        
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"	               
 	        android:background="@drawable/shape_fieldset"
-	        android:layout_marginTop="11dp" >          
+	        android:layout_marginTop="11dp" >
+	        	                 
 	    </RelativeLayout>
 	    <TextView android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
